--- a/05 - Sesion 5/Practica 1 - Sesion 5.ipynb
+++ b/05 - Sesion 5/Practica 1 - Sesion 5.ipynb
@@ -19,10 +19,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brilla brilla pequeña estrella, \n",
+      " ¡Cómo me pregunto lo que eres! \n",
+      "\t\t Por encima del mundo tan arriba, \n",
+      "\t Como un diamante en el cielo. \n",
+      " Brilla brilla pequeña estrella, \n",
+      " Cómo me pregunto lo que eres\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Brilla brilla pequeña estrella, \\n ¡Cómo me pregunto lo que eres! \\n\\t\\t Por encima del mundo tan arriba, \\n\\t Como un diamante en el cielo. \\n Brilla brilla pequeña estrella, \\n Cómo me pregunto lo que eres\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -261,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
